--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,9 @@
 footer {
-    padding: 20px;
-    text-align: center;
-  }
-  
+  height: 80px;
+  display: flex;
+  padding: 20px;
+  bottom: 0;
+  position: absolute;
+  justify-content: center;
+  width: 100%;
+}
