--- a/src/components/pages/Inicio/Inicio.css
+++ b/src/components/pages/Inicio/Inicio.css
@@ -1,25 +1,19 @@
+main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-size: 50px;
+}
 .portada {
-    width: 100%;
-    text-align: center;
-  }
-  
-  .portada-img {
-    width: 100%;  /* O ajusta el ancho según sea necesario */
-    height: auto; /* Mantener la proporción de aspecto */
-  }
-  main {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  h1 {
-    font-size: 40px;
-  }
-  
-  img {
-    width: 300px;
-    height: 200px;
-  }
+  width: 700px;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 80px;
+}
